Fix tooltip overflow

--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ body {
     }
 
     .content {
-        overflow-x: hidden;
+        /*overflow-x: hidden;*/
     }
 
 }
